fixed progress score alignment

--- a/src/components/play/brick/introduction/Introduction.scss
+++ b/src/components/play/brick/introduction/Introduction.scss
@@ -289,6 +289,7 @@
         position: relative;
         width: 100%;
         height: $progress-height;
+        margin-top: 7vh;
         .circle-progress-first {
           height: 50vh;
           width: 50vh;
